--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="styles.css" />
+		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 		<title>TODO APP</title>
 	</head>
 	<body>
@@ -22,6 +23,7 @@
 		</div>
 
 		<div id="posts-container"></div>
-		<script src="script.js"></script>
+		<button id="delete-completed-button">Delete all completed tasks</button>
+		<script src="script.js" type="module"></script>
 	</body>
 </html>
