--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="styles.css" />
+		<link rel="stylesheet" href="styles/main.css" />
 		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 		<title>TODO APP</title>
 	</head>
@@ -14,7 +14,7 @@
 		<div class="input-block">
 			<input type="text" id="task-input" placeholder="Enter task" />
 			<button id="add-button">
-				<img src="images/icon-add.png" class="icons" />
+				<img src="./assets/icons/icon-add.png" class="icons" />
 			</button>
 		</div>
 
@@ -24,6 +24,6 @@
 
 		<div id="posts-container"></div>
 		<button id="delete-completed-button">Delete all completed tasks</button>
-		<script src="script.js" type="module"></script>
+		<script src="./src/app.js" type="module"></script>
 	</body>
 </html>
