Handling Fetch API Errors, Project Complete ✅

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		</div>
 		<h1 class="app-title">TODO App</h1>
 		<form id="signup-form" class="form-container">
-			<h2 class="form-title">Registration</h2>
+			<h2 class="form-title">Sign Up</h2>
 			<input
 				type="email"
 				id="signup-email"
@@ -36,7 +36,7 @@
 		</form>
 
 		<form id="signin-form" class="form-container">
-			<h2 class="form-title">Authorization</h2>
+			<h2 class="form-title">Sign In</h2>
 			<input
 				type="email"
 				id="signin-email"
@@ -58,7 +58,7 @@
 				type="button"
 				class="form-button secondary"
 			>
-				Forgot Password?
+				Forgot password?
 			</button>
 		</form>
 		<form id="forgot-password-form">
@@ -69,22 +69,22 @@
 				required
 			/>
 			<button type="submit" class="form-button submit">
-				Send Password Reset Link
+				Send password reset link
 			</button>
 		</form>
 		<div id="forgot-password-message"></div>
 		<div id="task-container">
 			<div class="input-block">
-				<input type="text" id="task-input" placeholder="Enter task" />
+				<input type="text" id="task-input" placeholder="Enter a task" />
 				<button id="add-button">
 					<img src="./assets/icons/icon-add.png" class="icons" />
 				</button>
 			</div>
 
 			<div id="posts-container"></div>
-			<button id="delete-completed-button">Delete All Completed Tasks</button>
+			<button id="delete-completed-button">Delete all completed tasks</button>
 		</div>
-		<button id="logout-button" class="logout-button">Logout</button>
+		<button id="logout-button" class="logout-button">Log Out</button>
 		<script src="./src/app.js" type="module"></script>
 	</body>
 </html>
