--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			http-equiv="Content-Security-Policy"
+			content="upgrade-insecure-requests"
+		/>
 		<link rel="stylesheet" href="styles/main.css" />
 		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 		<title>TODO APP</title>
